ingress/api-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: zcorp
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: zcorp
    servicePort: http
  tls:
  - secretName: zcorp-https
  rules:
  - host:
    http:
      paths:
        - path: /
          backend:
            serviceName: zcorp
            servicePort: http
